<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:leon="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.christzhang.fragment.MineFragment"
    android:orientation="vertical"
    android:background="@color/color_gray">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="60dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginBottom="16dp"
                android:background="@color/material_colorAccent"
                android:gravity="center"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/profile_image"
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:src="@drawable/icon_account"
                    app:civ_border_width="2dp"
                    app:civ_border_color="@color/color_wihte"/>

                <TextView
                    android:id="@+id/showname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="彼岸流年"
                    android:textSize="18sp"
                    android:textColor="@color/color_wihte"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"/>
            </LinearLayout>
            <com.leon.lib.settingview.LSettingItem
                android:id="@+id/item_collect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                leon:leftIcon="@drawable/collect"
                leon:leftText="@string/text_collect"
                android:layout_marginLeft="7dp"
                android:layout_marginRight="7dp"
                />
            <com.leon.lib.settingview.LSettingItem
                android:id="@+id/item_hisroty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                leon:leftIcon="@drawable/history"
                leon:leftText="@string/text_history"
                android:layout_marginLeft="7dp"
                android:layout_marginRight="7dp"
                android:layout_marginTop="5dp"
                />
            <com.leon.lib.settingview.LSettingItem
                android:id="@+id/item_loc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                leon:leftIcon="@drawable/loca"
                leon:leftText="@string/text_loc"
                android:layout_marginLeft="7dp"
                android:layout_marginRight="7dp"
                android:layout_marginTop="5dp"
                />
            <com.leon.lib.settingview.LSettingItem
                android:id="@+id/item_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                leon:leftIcon="@drawable/source"
                leon:leftText="@string/text_link"
                android:layout_marginLeft="7dp"
                android:layout_marginRight="7dp"
                android:layout_marginTop="5dp"
                />
            <com.leon.lib.settingview.LSettingItem
                android:id="@+id/item_setting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                leon:leftIcon="@drawable/setting"
                leon:leftText="@string/text_setting"
                android:layout_marginLeft="7dp"
                android:layout_marginRight="7dp"
                android:layout_marginTop="5dp"
                />
            <com.leon.lib.settingview.LSettingItem
                android:id="@+id/item_about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                leon:leftIcon="@drawable/about"
                leon:leftText="@string/text_about"
                android:layout_marginLeft="7dp"
                android:layout_marginRight="7dp"
                android:layout_marginTop="5dp"
                />
            <com.leon.lib.settingview.LSettingItem
                android:id="@+id/item_upd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                leon:leftIcon="@drawable/upda"
                leon:leftText="@string/text_upd"
                android:layout_marginLeft="7dp"
                android:layout_marginRight="7dp"
                android:layout_marginTop="5dp"
                />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
